update social links

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">whosbacon</a>
+                <a class="navbar-brand topnav" href="#">Ken Hu</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -113,8 +113,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Data engineering and sciencing</h2>
-                    <p class="lead">I have been working in the software industry since 2007, and used a range of languages from Java, C#, to Python, Javascript, and Prolog. I was also fortunate enough to attend one of the leading Artificial Intelligence and Computer Science universities, University of Edinburgh. You can take a look at my public work on <a href="https://github.com/whosken">Github</a>.</p>
+                    <h2 class="section-heading">Data Engineering + Sciencing</h2>
+                    <p class="lead">I have been working in the software industry since 2007, and used a range of languages from Java, C#, to Python, Javascript, and Prolog. I was also fortunate enough to attend one of the leading Artificial Intelligence and Computer Science universities, University of Edinburgh. <br>You can find my public work on <a href="https://github.com/whosken">Github</a>.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/ipad.png" alt="">
@@ -135,8 +135,8 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Startup something</h2>
-                    <p class="lead">Previously as a solo founder, I was able to build a team around my startup and grow it into a revenue positive entity, without outside funding. This experience has taught me a great deal of business and marketing skills. You can explore my entrepreneur journey on my <a href="https://angel.co/kenhu">AngelList</a> profile.</p>
+                    <h2 class="section-heading">Startup Something</h2>
+                    <p class="lead">Previously as a solo founder, I was able to build a team around my startup and grow it into a revenue positive entity, without outside funding. This experience has taught me a great deal of business and marketing skills. <br>You can explore my entrepreneur journey on my <a href="https://angel.co/kenhu">AngelList</a> profile.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/dog.png" alt="">
@@ -157,8 +157,8 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Occasionally drawing</h2>
-                    <p class="lead">I've had an interest in drawing for as long as I can remember. Having rekindled that passion in adulthood, I exercise it on my favorite subjects from fashion to superheroes. My work are collected on <a href="http://nomadicdrawings.com/">Nomadic Drawings</a> and <a href="https://www.instagram.com/nomadicdrawings/">Instagram</a>.</p>
+                    <h2 class="section-heading">Occasionally Drawing</h2>
+                    <p class="lead">I've had an interest in drawing for as long as I can remember. Having rekindled that passion in adulthood, I exercise it on my favorite subjects from fashion to superheroes. <br>You can browse my collection on <a href="http://nomadicdrawings.com/">Nomadic Drawings</a> and <a href="https://www.instagram.com/nomadicdrawings/">Instagram</a>.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/phones.png" alt="">
@@ -194,6 +194,9 @@
                         <li>
                             <a href="https://linkedin.com/in/kenhu" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                         </li>
+                        <li>
+                            <a href="mailto:whosbacon@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">Email</span></a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -209,7 +212,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <ul class="list-inline">
+                    <!-- <ul class="list-inline">
                         <li>
                             <a href="#">Home</a>
                         </li>
@@ -228,7 +231,7 @@
                         <li>
                             <a href="mailto:whosbacon@gmail.com">Email</a>
                         </li>
-                    </ul>
+                    </ul> -->
                     <p class="copyright text-muted small">Copyright &copy; Ken Hu 2016. All Rights Reserved</p>
                 </div>
             </div>
