--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Ken Hu: Technologist, Creative, Startup">
+    <meta name="author" content="whosbacon@gmail.com">
 
     <title>Ken Hu: Technologist, Creative, Startup</title>
 
@@ -177,6 +177,9 @@
         <div class="container">
 
             <div class="row">
+                <!-- <div class="col-lg-6">
+                    <h2>Connect with me:</h2>
+                </div> -->
                 <div class="col-lg-12">
                     <ul class="list-inline banner-social-buttons">
                         <li>
