update image and css

--- a/index.html
+++ b/index.html
@@ -49,19 +49,22 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="https://medium.com/@whosbacon">Blog</a>
+                        <a href="https://medium.com/@whosbacon" target="_blank">Blog</a>
                     </li>
                     <li>
-                        <a href="https://gist.github.com/whosken/7651661">Resumé</a>
+                        <a href="https://gist.github.com/whosken/7651661" target="_blank">Resumé</a>
                     </li>
                     <li>
-                        <a href="http://nomadicdrawings.com/">Art</a>
+                        <a href="http://nomadicdrawings.com/" target="_blank">Art</a>
                     </li>
                     <li>
-                        <a href="http://vagabond.whosbacon.com/">Travel</a>
+                        <a href="http://vagabond.whosbacon.com/" target="_blank">Travel</a>
                     </li>
                     <li>
-                        <a href="mailto:whosbacon@gmail.com">Email</a>
+                        <a href="http://otherside.whosbacon.com/" target="_blank">Musing</a>
+                    </li>
+                    <li>
+                        <a href="mailto:whosbacon@gmail.com" target="_blank">Email</a>
                     </li>
                 </ul>
             </div>
@@ -84,13 +87,16 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
                             <li>
-                                <a href="https://twitter.com/whosbacon" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                                <a href="https://twitter.com/whosbacon" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                             </li>
                             <li>
-                                <a href="https://github.com/whosken" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                                <a href="https://github.com/whosken" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/nomadicdrawings/" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                                <a href="https://www.instagram.com/nomadicdrawings/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                            </li>
+                            <li>
+                                <a href="https://angel.co/kenhu" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-angellist fa-fw"></i> <span class="network-name">AngelList</span></a>
                             </li>
                         </ul>
                     </div>
@@ -111,13 +117,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
+                    <!-- <hr class="section-heading-spacer"> -->
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Data Engineering + Sciencing</h2>
-                    <p class="lead">I have been working in the software industry since 2007, and used a range of languages from Java, C#, to Python, Javascript, and Prolog. I was also fortunate enough to attend one of the leading Artificial Intelligence and Computer Science universities, University of Edinburgh. <br>You can find my public work on <a href="https://github.com/whosken">Github</a>.</p>
+                    <p class="lead">I have been working in the software industry since 2007, and used a range of languages from C# to Python and Javascript. I was also fortunate enough to attend one of the leading Artificial Intelligence and Computer Science universities, University of Edinburgh. <br>You can find my <a href="https://github.com/whosken" target="_blank">code samples</a> and <a href="https://gist.github.com/whosken/7651661" target="_blank">resumé</a> on Github.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive" src="img/tech.jpg" alt="">
                 </div>
             </div>
 
@@ -133,13 +139,13 @@
 
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <hr class="section-heading-spacer">
+                    <!-- <hr class="section-heading-spacer"> -->
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Startup Something</h2>
-                    <p class="lead">Previously as a solo founder, I was able to build a team around my startup and grow it into a revenue positive entity, without outside funding. This experience has taught me a great deal of business and marketing skills. <br>You can explore my entrepreneur journey on my <a href="https://angel.co/kenhu">AngelList</a> profile.</p>
+                    <h2 class="section-heading">Occasionally Drawing</h2>
+                    <p class="lead">I've had an interest in drawing for as long as I can remember. Having rekindled that passion in adulthood, I exercise it on my favorite subjects from fashion to superheroes. <br>You can browse my collection on <a href="http://nomadicdrawings.com/" target="_blank">Nomadic Drawings</a> and <a href="https://www.instagram.com/nomadicdrawings/" target="_blank">Instagram</a>.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                    <img class="img-responsive" src="img/art.jpg" alt="">
                 </div>
             </div>
 
@@ -155,13 +161,13 @@
 
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
-                    <hr class="section-heading-spacer">
+                    <!-- <hr class="section-heading-spacer"> -->
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Occasionally Drawing</h2>
-                    <p class="lead">I've had an interest in drawing for as long as I can remember. Having rekindled that passion in adulthood, I exercise it on my favorite subjects from fashion to superheroes. <br>You can browse my collection on <a href="http://nomadicdrawings.com/">Nomadic Drawings</a> and <a href="https://www.instagram.com/nomadicdrawings/">Instagram</a>.</p>
+                    <h2 class="section-heading">Startup Something</h2>
+                    <p class="lead">Previously as a solo founder, I was able to build a team around my startup and grow it into a revenue positive entity, without outside funding. This experience has taught me a great deal of business and marketing skills. <br>You can explore my entrepreneural journey on <a href="https://angel.co/kenhu" target="_blank">AngelList</a>.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                    <img class="img-responsive" src="img/startup.jpg" alt="">
                 </div>
             </div>
 
@@ -183,22 +189,22 @@
                 <div class="col-lg-12">
                     <ul class="list-inline banner-social-buttons">
                         <li>
-                            <a href="https://twitter.com/whosbacon" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                            <a href="https://twitter.com/whosbacon" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                         </li>
                         <li>
-                            <a href="https://github.com/whosken" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                            <a href="https://github.com/whosken" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/nomadicdrawings/" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                            <a href="https://www.instagram.com/nomadicdrawings/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
                         </li>
                         <li>
-                            <a href="https://angel.co/kenhu" class="btn btn-default btn-lg"><i class="fa fa-angellist fa-fw"></i> <span class="network-name">AngelList</span></a>
+                            <a href="https://angel.co/kenhu" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-angellist fa-fw"></i> <span class="network-name">AngelList</span></a>
                         </li>
                         <li>
-                            <a href="https://linkedin.com/in/kenhu" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            <a href="https://linkedin.com/in/kenhu" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                         </li>
                         <li>
-                            <a href="mailto:whosbacon@gmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">Email</span></a>
+                            <a href="mailto:whosbacon@gmail.com" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-envelope fa-fw"></i> <span class="network-name">Email</span></a>
                         </li>
                     </ul>
                 </div>
