--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a href="https://gist.github.com/whosken/7651661" target="_blank">Resumé</a>
                     </li>
                     <li>
-                        <a href="http://nomadicdrawings.com/" target="_blank">Art</a>
+                        <a href="http://illustrated.whosbacon.com/" target="_blank">Art</a>
                     </li>
                     <li>
                         <a href="http://vagabond.whosbacon.com/" target="_blank">Travel</a>
@@ -93,7 +93,7 @@
                                 <a href="https://github.com/whosken" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                             </li>
                             <li>
-                                <a href="https://www.instagram.com/nomadicdrawings/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                                <a href="https://www.instagram.com/chicgeekillustrated/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
                             </li>
                             <li>
                                 <a href="https://angel.co/kenhu" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-angellist fa-fw"></i> <span class="network-name">AngelList</span></a>
@@ -142,7 +142,7 @@
                     <!-- <hr class="section-heading-spacer"> -->
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Occasionally Drawing</h2>
-                    <p class="lead">I've had an interest in drawing for as long as I can remember. Having rekindled that passion in adulthood, I exercise it on my favorite subjects from fashion to superheroes. <br>You can browse my collection on <a href="http://nomadicdrawings.com/" target="_blank">Nomadic Drawings</a> and <a href="https://www.instagram.com/nomadicdrawings/" target="_blank">Instagram</a>.</p>
+                    <p class="lead">I've had an interest in drawing for as long as I can remember. Having rekindled that passion in adulthood, I exercise it on my favorite subjects from fashion to superheroes. <br>You can browse my collection on <a href="http://illustrated.whosbacon.com/" target="_blank">Chic Geek Illustrated</a> and <a href="https://www.instagram.com/chicgeekillustrated/" target="_blank">Instagram</a>.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="img/art.jpg" alt="">
@@ -195,7 +195,7 @@
                             <a href="https://github.com/whosken" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/nomadicdrawings/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
+                            <a href="https://www.instagram.com/chicgeekillustrated/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
                         </li>
                         <li>
                             <a href="https://angel.co/kenhu" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-angellist fa-fw"></i> <span class="network-name">AngelList</span></a>
@@ -221,27 +221,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <!-- <ul class="list-inline">
-                        <li>
-                            <a href="#">Home</a>
-                        </li>
-                        <li>
-                            <a href="https://medium.com/@whosbacon">Blog</a>
-                        </li>
-                        <li>
-                            <a href="https://gist.github.com/whosken/7651661">Resumé</a>
-                        </li>
-                        <li>
-                            <a href="http://nomadicdrawings.com/">Art</a>
-                        </li>
-                        <li>
-                            <a href="http://vagabond.whosbacon.com/">Travel</a>
-                        </li>
-                        <li>
-                            <a href="mailto:whosbacon@gmail.com">Email</a>
-                        </li>
-                    </ul> -->
-                    <p class="copyright text-muted small">Copyright &copy; Ken Hu 2016. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; 2016. All Rights Reserved</p>
                 </div>
             </div>
         </div>
