Update CV location

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="https://medium.com/@whosbacon" target="_blank">Blog</a>
                     </li>
                     <li>
-                        <a href="https://gist.github.com/whosken/7651661" target="_blank">Resumé</a>
+                        <a href="/cv" target="_blank">CV</a>
                     </li>
                     <li>
                         <a href="http://illustrated.whosbacon.com/" target="_blank">Art</a>
@@ -95,9 +95,6 @@
                             <li>
                                 <a href="https://www.instagram.com/chicgeekillustrated/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-instagram fa-fw"></i> <span class="network-name">Instagram</span></a>
                             </li>
-                            <li>
-                                <a href="https://angel.co/kenhu" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-angellist fa-fw"></i> <span class="network-name">AngelList</span></a>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -120,7 +117,7 @@
                     <!-- <hr class="section-heading-spacer"> -->
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Data Engineering + Sciencing</h2>
-                    <p class="lead">I have been working in the software industry since 2007, and used a range of languages from C# to Python and Javascript. I was also fortunate enough to attend one of the leading Artificial Intelligence and Computer Science universities, University of Edinburgh. <br>You can find my <a href="https://github.com/whosken" target="_blank">code samples</a> and <a href="https://gist.github.com/whosken/7651661" target="_blank">resumé</a> on Github.</p>
+                    <p class="lead">I have been working in the software industry since 2007, and used a range of languages from C# to Python and Javascript. I was also fortunate enough to attend one of the leading Artificial Intelligence and Computer Science universities, University of Edinburgh. <br>Here you can find my <a href="https://github.com/whosken" target="_blank">code samples</a> and <a href="/cv" target="_blank">CV</a>.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/tech.jpg" alt="">
