--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
                 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-                                })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+                                })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
         ga('create', 'UA-46000937-1', 'auto');
         ga('send', 'pageview');
     </script>
@@ -104,10 +104,11 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
+                    <h3 class="section-subheading text-muted">This is who I am.</h3>
                 </div>
                 <div class="col-sm-4 col-sm-offset-4">
                     <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
+                        <img src="img/profile.jpg" class="img-responsive img-circle" alt="">
                         <h4>Ken Hu</h4>
                         <p class="text-muted">Python Developer</p>
                         <ul class="list-inline social-buttons">
@@ -121,11 +122,9 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-4 col-md-offset-2">
-                    <h4 class="service-heading">Introduction</h4>
                     <p class="text-muted">I am a Python developer with data engineering background. My professional experiences ranges across API development, natural language processing, business intelligence dashboard, and machine learning. I also have strong interests in search engines and data visualization.</p>
                 </div>
                 <div class="col-md-4">
-                    <h4 class="service-heading">Accomplishment</h4>
                     <p class="text-muted">For my previous startup, I've built a social analytics product to analyze the Chinese social media Weibo. It would collect the social conversations surround a keyword and determine the prevailing emotions.</p>
                 </div>
             </div>
@@ -273,7 +272,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading text-muted">Arts</h2>
-                    <h3 class="section-subheading text-muted">I am also an illustrator, publishing as <a href="http://illustrated.whosbacon.com/">Chic Geek Illustrated</a>.</h3>
+                    <h3 class="section-subheading text-muted">I am also an illustrator, publishing as <a href="http://illustrated.whosbacon.com/" target="_blank">Chic Geek Illustrated</a>.</h3>
                 </div>
             </div>
             <div class="row">
@@ -284,29 +283,18 @@
         </div>
     </section>
 
-    <!-- Clients Aside -->
-    <aside class="clients">
+    <!-- Socal Aside -->
+    <aside>
         <div class="container">
             <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <a class="btn btn-lg" href="https://twitter.com/whosbacon"><i class="fa fa-twitter fa-2x"></i></a>
+                    <a class="btn btn-lg" href="https://github.com/whosken/"><i class="fa fa-github fa-2x"></i></a>
+                    <a class="btn btn-lg" href="https://www.linkedin.com/in/kenhu"><i class="fa fa-linkedin fa-2x"></i></a>
+                    <a class="btn btn-lg" href="https://medium.com/@whosbacon"><i class="fa fa-medium fa-2x"></i></a>
+                    <a class="btn btn-lg" href="https://www.instagram.com/chicgeekillustrated/"><i class="fa fa-instagram fa-2x"></i></a>
+                    <a class="btn btn-lg" href="https://angel.co/kenhu"><i class="fa fa-angellist fa-2x"></i></a>
+                    <a class="btn btn-lg" href="mailto:whosbacon@gmail.com"><i class="fa fa-envelope fa-2x"></i></a>
                 </div>
             </div>
         </div>
@@ -448,87 +436,6 @@
                             <img class="img-responsive img-centered" src="img/portfolio/treehouse-preview.png" alt="">
                             <p>Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies looking to showcase their apps or other projects.</p>
                             <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/golden-preview.png" alt="">
-                            <p>Start Bootstrap's Agency theme is based on Golden, a free PSD website template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Golden is a modern and clean one page web template that was made exclusively for Best PSD Freebies. This template has a great portfolio, timeline, and meet your team sections that can be easily modified to fit your needs.</p>
-                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/golden-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Portfolio Modal 5 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/escape-preview.png" alt="">
-                            <p>Escape is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Escape is a one page web template that was designed with agencies in mind. This template is ideal for those looking for a simple one page solution to describe your business and offer your services.</p>
-                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/escape-one-page-psd-web-template/">FreebiesXpress.com</a>.</p>
-                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Portfolio Modal 6 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <!-- Project Details Go Here -->
-                            <h2>Project Name</h2>
-                            <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                            <img class="img-responsive img-centered" src="img/portfolio/dreams-preview.png" alt="">
-                            <p>Dreams is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. Dreams is a modern one page web template designed for almost any purpose. It’s a beautiful template that’s designed with the Bootstrap framework in mind.</p>
-                            <p>You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/dreams-free-one-page-web-template/">FreebiesXpress.com</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
