--- a/index.html
+++ b/index.html
@@ -483,6 +483,8 @@
 
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="js/classie.js"></script>
+    <script src="js/cbpAnimatedHeader.min.js"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
