--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Searching; in documents, data, tech, arts, entrepreneurship, world, love, and life.">
+    <meta name="description" content="Keep searching; in data, tech, arts, startups, world, love, and life.">
     <meta name="author" content="Ken Hu">
 
     <title>whosbacon: Ken Hu</title>
