--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center outro-body">
-                    <p>I am available for contract or collaboration. Please don't hestitate to reach out to me if you have any questions, comments, or requests!</p>
+                    <p>I am available for contract or collaboration. Please don't hesitate to reach out to me if you have any questions, comments, or requests!</p>
                     <p><a class="btn btn-primary" href="mailto:whosbacon@gmail.com" target="_blank">whosbacon@gmail.com</a></p>
                 </div>
             </div>
