--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-2">
-                    <p class="text-muted">I am a Python developer with data engineering background. My professional experiences ranges across API development, natural language processing, business intelligence dashboard, and machine learning. I also have strong interests in search engines and data visualization.</p>
+                    <p class="text-muted">I am a Python developer with specialization in machine learning. My professional experiences ranges across API development, natural language processing, business intelligence dashboard, and machine learning. I also have strong interests in search engines and data visualization.</p>
                 </div>
                 <div class="col-md-4">
                     <p class="text-muted">For my previous startup, I've built a social analytics product with a bespoke NLP engine to analyze the Chinese social media. It would collect the social conversations surround a keyword and determine the prevailing emotions.</p>
