--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="cv" title="CV"><i class="fa fa-file-text"></i></a></li>
-                    <li><a href="https://medium.com/@whosbacon" title="Blog"><i class="fa fa-pencil"></i></a></li>
+                    <li><a href="https://medium.com/@whosbacon" title="Blog"><i class="fa fa-pencil-square-o"></i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -122,7 +122,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 col-md-offset-2">
-                    <p class="text-muted">I am a Python developer with specialization in machine learning. My professional experiences ranges across API development, natural language processing, business intelligence dashboard, and machine learning. I also have strong interests in search engines and data visualization.</p>
+                    <p class="text-muted">I am a Python developer, specializing in data and natural language analysis. My professional experiences ranges across API development, natural language processing, business intelligence dashboard, and machine learning. I also have strong interests in search engines and data visualization.</p>
                 </div>
                 <div class="col-md-4">
                     <p class="text-muted">For my previous startup, I've built a social analytics product with a bespoke NLP engine to analyze the Chinese social media. It would collect the social conversations surround a keyword and determine the prevailing emotions.</p>
