update blog icon

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="cv" title="CV"><i class="fa fa-file-text"></i></a></li>
-                    <li><a href="https://medium.com/@whosbacon" title="Blog"><i class="fa fa-pencil-square-o"></i></a></li>
+                    <li><a href="https://medium.com/@whosbacon" title="Blog"><i class="fa fa-commenting"></i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
