Add newsletter widget

--- a/index.html
+++ b/index.html
@@ -474,6 +474,8 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
+    
+    <script type="text/javascript" widget-id="wsHKXSSgNEgaSoGDPUqK2T" src="//app.sendx.io/static_source/widgets/server/widgets.js" async="async"></script>
 
 </body>
 
