Update illustration blog target

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading heading-inverted">Arts</h2>
-                    <h3 class="section-subheading heading-inverted">I am also an illustrator, publishing as <a href="http://illustrated.whosbacon.com/" target="_blank">Chic Geek Illustrated</a></h3>
+                    <h3 class="section-subheading heading-inverted">I am also an illustrator, publishing as <a href="https://www.instagram.com/chicgeekillustrated/">Chic Geek Illustrated</a></h3>
                 </div>
             </div>
             <div class="row">
