add social links to header; update instagram widget

--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="cv" title="CV"><i class="fa fa-file-text"></i></a></li>
-                    <li><a href="https://medium.com/@whosbacon" title="Blog"><i class="fa fa-commenting"></i></a></li>
+                    <li><a title="Twitter" href="https://twitter.com/whosbacon"><i class="fa fa-twitter"></i></a></li>
+                    <li><a title="Github" href="https://github.com/whosken/"><i class="fa fa-github"></i></a></li>
+                    <li><a title="LinkedIn" href="https://www.linkedin.com/in/kenhu"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a title="Blog" href="https://medium.com/@whosbacon"><i class="fa fa-medium"></i></a></li>
+                    <li><a title="CV" href="cv"><i class="fa fa-file-text"></i></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
@@ -372,7 +375,9 @@
             </div>
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <!-- LightWidget WIDGET --><script src="http://lightwidget.com/widgets/lightwidget.js"></script><iframe src="http://lightwidget.com/widgets/944b6354551458fa8b600d0bcea7cadb.html" id="lightwidget_944b635455" name="lightwidget_944b635455"  scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+                    <!-- SnapWidget -->
+                    <script src="https://snapwidget.com/js/snapwidget.js"></script>
+                    <iframe src="https://snapwidget.com/embed/code/189923" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; "></iframe>
                 </div>
             </div>
         </div>
