Update with recent experiences

--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
                                 </div>
                                 <div class="timeline-body">
                                     <ul class="text-muted">
+                                        <li>Created analytics dashboard for platform user activities with Django, Elasticsearch, and D3.js</li>
+                                        <li>Developed microservice with predictive data model using Flask, Numpy, and Scikit-learn</li>
                                         <li>Developed backend RESTful API for dating application with scalable matching algorithm using Python and MongoDB</li>
                                     </ul>
                                 </div>
